Added todos component to the application

--- a/client/views/app.html
+++ b/client/views/app.html
@@ -1,1 +1,8 @@
-<h1> hello from angular2 yoooo</h1>
+<div class="jumbotron">
+    <h1 class="page-header">Todos Application</h1>
+    <div class="row">
+        <div class="col-lg-4 col-lg-offset-4">
+            <my-todos></my-todos>
+        </div>
+    </div>
+</div>
