--- a/client/views/index.html
+++ b/client/views/index.html
@@ -22,7 +22,9 @@
 <!-- 3. Display the application -->
 
 <body class="container text-center">
-    <app>Loading...</app>
+    <div class="container">
+        <my-app>Loading...</my-app>
+    </div>
 </body>
 
 </html>
