--- a/client/views/todos.html
+++ b/client/views/todos.html
@@ -1,6 +1,5 @@
 <ul class="list-group">
     <li class="list-group-item list-group-item-info" *ngFor="let todo of todos">
-        <p class="list-group-item-text" [textContent]="todo.text"></p>
-        <button>Delete <span class="glyphicon glyphicon-trash"></span></button>
+        <p class="list-group-item-text" [textContent]="todo.text"></p> <span><button class="btn btn-danger">Delete<span class="glyphicon glyphicon-trash"></span></button></span>
     </li>
 </ul>
