--- a/client/views/app.html
+++ b/client/views/app.html
@@ -1,7 +1,7 @@
 <div class="jumbotron">
     <h1 class="page-header">Todos Application</h1>
     <div class="row">
-        <div class="col-lg-4 col-lg-offset-4">
+        <div class="col-lg-12">
             <my-todos></my-todos>
         </div>
     </div>
