Added todo to the UI as a list group item

--- a/client/views/todos.html
+++ b/client/views/todos.html
@@ -1,5 +1,5 @@
 <ul class="list-group">
     <li class="list-group-item list-group-item-info" *ngFor="let todo of todos">
-        <p class="list-group-item-text text-left lead" [textContent]="todo.text"></p> <span><button class="btn btn-danger">Delete<span class="glyphicon glyphicon-trash"></span></button></span>
+           {{todo.text}} <span class="glyphicon glyphicon-trash"></span>
     </li>
 </ul>
