--- a/client/views/app.html
+++ b/client/views/app.html
@@ -1,8 +1,10 @@
 <div class="jumbotron">
     <h1 class="page-header">Todos Application</h1>
 </div>
-<div class="row">
-    <div class="col-lg-12">
-        <my-todos></my-todos>
+<div class="well">
+    <div class="row">
+        <div class="col-lg-12">
+            <my-todos></my-todos>
+        </div>
     </div>
 </div>
