--- a/client/views/app.html
+++ b/client/views/app.html
@@ -2,6 +2,7 @@
     <h1 class="page-header">Todos Application</h1>
 </div>
 <div class="well">
+    <register-todo></register-todo>
     <div class="row">
         <div class="col-lg-12">
             <my-todos></my-todos>
