Added registration form

--- a/client/views/register.html
+++ b/client/views/register.html
@@ -1,13 +1,14 @@
-<form class="form-horizontal">
-    <div class="form-group">
+<form class="form-inline">
+    <div class="form-group text-left">
         <label class="control-label col-lg-2">Todo</label>
         <div class="col-lg-10">
             <div class="input-group">
                 <span class="input-group-addon">
                     <span class="glyphicon glyphicon-calendar"></span> 
                 </span>
-                <input type="text" class="form-control">
+                <input type="text" class="form-control" placeholder="Specify Todo Here">
             </div>
         </div> 
     </div>
+    <button class="btn btn-primary" type="submit">Submit</button>
 </form>
