Logging what is returned by the ngForm directive

--- a/client/views/register.html
+++ b/client/views/register.html
@@ -1,12 +1,11 @@
-<form class="form-inline">
+<form (ngSubmit)="postTodo(form)" class="form-inline" novalidate #form="ngForm">
     <div class="form-group text-left">
-        <label class="control-label col-lg-2">Todo</label>
         <div class="col-lg-10">
             <div class="input-group">
                 <span class="input-group-addon">
                     <span class="glyphicon glyphicon-calendar"></span> 
                 </span>
-                <input type="text" class="form-control" placeholder="Specify Todo Here">
+                <input [(ngModel)]="text" name="todo" type="text" class="form-control" placeholder="Specify Todo Here" required>
             </div>
         </div> 
     </div>
