--- a/client/views/register.html
+++ b/client/views/register.html
@@ -1,13 +1,13 @@
-<form (ngSubmit)="postTodo(form)" class="form-inline" novalidate #form="ngForm">
+<form (ngSubmit)="postTodo(todoField)" class="form-inline" novalidate #form="ngForm">
     <div class="form-group text-left">
         <div class="col-lg-10">
             <div class="input-group">
                 <span class="input-group-addon">
                     <span class="glyphicon glyphicon-calendar"></span> 
                 </span>
-                <input [(ngModel)]="text" name="todo" type="text" class="form-control" placeholder="Specify Todo Here" required>
+                <input [(ngModel)]="text" #todoField="ngModel" name="todo" type="text" class="form-control" placeholder="Specify Todo Here" required>
             </div>
         </div> 
     </div>
-    <button class="btn btn-primary" type="submit">Submit</button>
+    <button disabled="form.invalid" class="btn btn-primary" type="submit">Submit</button>
 </form>
