Logging what is returned by the ngModel directive

--- a/client/views/register.html
+++ b/client/views/register.html
@@ -9,5 +9,5 @@
             </div>
         </div> 
     </div>
-    <button disabled="form.invalid" class="btn btn-primary" type="submit">Submit</button>
+    <button [disabled]="form.invalid" class="btn btn-primary" type="submit">Submit</button>
 </form>
