Logging what is returned by the ngModel directive

--- a/client/views/register.html
+++ b/client/views/register.html
@@ -1,4 +1,4 @@
-<form (ngSubmit)="postTodo(todoField)" class="form-inline" novalidate #form="ngForm">
+<form (ngSubmit)="onClick(todoField)" class="form-inline" novalidate #form="ngForm">
     <div class="form-group text-left">
         <div class="col-lg-10">
             <div class="input-group">
