Added complete button to the UI

--- a/client/views/todos.html
+++ b/client/views/todos.html
@@ -3,6 +3,7 @@
     <li class="list-group-item list-group-item-info" *ngFor="let todo of todos">
            <p class="lead text-left" [textContent]="todo.text"></p>
            <button (click)="deleteTodo(todo._id)" class="btn btn-danger text-center">Delete <span class="glyphicon glyphicon-trash"></span></button>
-           <button (click)="deleteTodo(todo._id)" class="btn btn-info text-center">Delete <span class="glyphicon glyphicon-pencil"></span></button>
+           <button class="btn btn-info text-center">Edit <span class="glyphicon glyphicon-pencil"></span></button>
+           <button class="btn btn-success text-center">Complete <span class="glyphicon glyphicon-ok"></span></button>
     </li>
 </ul>
