--- a/client/views/register.html
+++ b/client/views/register.html
@@ -1,11 +1,11 @@
-<form (ngSubmit)="onClick(todoField)" class="form-inline" novalidate #form="ngForm">
+<form (ngSubmit)="onClick(todoField, form)" class="form-inline" novalidate #form="ngForm">
     <div class="form-group text-left">
         <div class="col-lg-10">
             <div class="input-group">
                 <span class="input-group-addon">
                     <span class="glyphicon glyphicon-calendar"></span> 
                 </span>
-                <input name="todo" type="text" class="form-control" placeholder="Specify Todo Here" [(ngModel)]="text" #todoField="ngModel" required>
+                <input name="todo" type="text" class="form-control" placeholder="New Todo" [(ngModel)]="text" #todoField="ngModel" required>
             </div>
         </div> 
     </div>
