--- a/client/views/app.html
+++ b/client/views/app.html
@@ -1,5 +1,5 @@
 <div class="jumbotron">
-    <h1 class="page-header">Todos Application</h1>
+    <h1 class="page-header text-left"><i>Todos Application</i></h1>
 </div>
 <div class="well">
     <div class="row">
