--- a/client/views/todos.html
+++ b/client/views/todos.html
@@ -1,8 +1,9 @@
 <register-todo (onClick)="postTodo($event)"></register-todo>
+<edit-todo *ngIf="showEdit" (onClick)="patchTodo($event)"></edit-todo>
 <ul class="list-group">
     <li class="list-group-item list-group-item-info" *ngFor="let todo of todos">
            <p class="lead text-left" [textContent]="todo.text"></p>
            <button (click)="deleteTodo(todo._id)" class="btn btn-success text-center">Complete <span class="glyphicon glyphicon-ok"></span></button>
-           <button class="btn btn-info text-center">Edit <span class="glyphicon glyphicon-pencil"></span></button>
+           <button (click)="revealEdit()" class="btn btn-info text-center">Edit <span class="glyphicon glyphicon-pencil"></span></button>
     </li>
 </ul>
