--- a/client/views/todos.html
+++ b/client/views/todos.html
@@ -4,6 +4,6 @@
     <li class="list-group-item list-group-item-info" *ngFor="let todo of todos">
            <p class="lead text-left" [textContent]="todo.text"></p>
            <button (click)="deleteTodo(todo._id)" class="btn btn-success text-center">Complete <span class="glyphicon glyphicon-ok"></span></button>
-           <button (click)="revealEdit()" class="btn btn-info text-center">Edit <span class="glyphicon glyphicon-pencil"></span></button>
+           <button (click)="revealEdit(todo._id)" class="btn btn-info text-center">Edit <span class="glyphicon glyphicon-pencil"></span></button>
     </li>
 </ul>
